# lab-wireguard

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
config/: config.yaml
config/interfaces/: wg0.json  wg1.json
lib/php/: README.md  composer.json
lib/php/examples/: 01_provision_peer.php  02_offboard_user.php  03_dashboard_metrics.php  04_bulk_create_users.php  05_rotate_peer_key.php  06_disable_inactive_peers.php  07_self_service_portal.php
lib/php/src/: HttpClient.php  InterfacesApi.php  MetricsApi.php  PeersApi.php  ProvisioningApi.php  UsersApi.php  WgPortalClient.php
lib/php/tests/: HttpClientTest.php  InterfacesTest.php  MetricsTest.php  PeersTest.php  ProvisioningTest.php  UsersTest.php
lib/python/: .gitignore  README.md  pyproject.toml
lib/python/examples/: 01_provision_peer.py  02_offboard_user.py  03_dashboard_metrics.py  04_bulk_create_users.py  05_rotate_peer_key.py  06_disable_inactive_peers.py  07_self_service_portal.py
lib/python/src/wg_portal_client/: __init__.py  _http.py  _models.py  client.py  interfaces.py  metrics.py  peers.py  provisioning.py  users.py
lib/python/tests/: conftest.py  test_client.py  test_interfaces.py  test_metrics.py  test_peers.py  test_provisioning.py  test_users.py
lib/rust/: Cargo.toml  README.md
lib/rust/examples/: 01_provision_peer.rs  02_offboard_user.rs  03_dashboard_metrics.rs  04_bulk_create_users.rs  05_rotate_peer_key.rs  06_disable_inactive_peers.rs  07_self_service_portal.rs
lib/rust/src/: client.rs  http.rs  interfaces.rs  lib.rs  metrics.rs  models.rs  peers.rs  provisioning.rs  users.rs
lib/rust/tests/: interfaces_test.rs  metrics_test.rs  peers_test.rs  provisioning_test.rs  users_test.rs
lib/typescript/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
lib/typescript/examples/: 01-provision-peer.ts  02-offboard-user.ts  03-dashboard-metrics.ts  05-rotate-peer-key.ts  (+3 more)
scripts/: seed-interfaces.sh
test/: run-test.sh
(+16 files in other folders)
