[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wg-portal-client"
version = "1.0.0"
description = "Python client for the WireGuard Portal v2 REST API"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Judicaël AHYI (ludndev)", email = "ludndev@gmail.com"},
]
keywords = ["wireguard", "wg-portal", "vpn", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpx>=0.30", "mypy>=1"]

[project.urls]
Homepage = "https://github.com/ludndev/lab-wireguard"
Issues = "https://github.com/ludndev/lab-wireguard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"
exclude = ["tests/", "examples/"]
