[package]
name = "wg-portal-client"
version = "1.0.0"
edition = "2021"
description = "Rust client for the WireGuard Portal v2 REST API"
authors = ["Judicaël AHYI (ludndev) <ludndev@gmail.com>"]
license = "MIT"
keywords = ["wireguard", "wg-portal", "vpn", "api-client"]
repository = "https://github.com/anomalyco/wireguard"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
base64 = "0.22"

[dev-dependencies]
mockito = "1"
env_logger = "0.11"
chrono = "0.4"
